[gd_scene load_steps=7 format=2]

[ext_resource path="res://characters/Character.gd" type="Script" id=1]

[sub_resource type="Animation" id=77]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("..:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "attack_front" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=78]
resource_name = "dialogue_ping"
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("..:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true ]
}

[sub_resource type="RectangleShape2D" id=79]
extents = Vector2( 7, 8 )

[sub_resource type="RectangleShape2D" id=80]
extents = Vector2( 7, 8 )

[sub_resource type="RectangleShape2D" id=81]
extents = Vector2( 7, 8 )

[node name="Character" type="KinematicBody2D" groups=["character"]]
collision_layer = 3
collision_mask = 3
collision/safe_margin = 0.001
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite"]
anims/RESET = SubResource( 77 )
anims/dialogue_ping = SubResource( 78 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 79 )
one_way_collision_margin = 0.0

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 80 )
one_way_collision_margin = 0.0

[node name="Interactionbox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactionbox"]
shape = SubResource( 81 )
one_way_collision_margin = 0.0

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="Interactionbox" to="." method="_on_Interactionbox_area_entered"]
